[build-system]
requires = ["setuptools>=77", "setuptools-scm[toml]>=8", "wheel", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "phylodist"
authors = [
    { name = "Yi Liu", email = "caoxen7ys@yahoo.com" },
]
description = "Phylogenetic orthology inference for comparative genomics"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.11"
keywords = [
    "Phylogenetic distance or smilarity",
]
license = "LGPL-3.0-only"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Betaimport timeit
    #   5 - Production/Stable
    'Development Status :: 4 - Beta',

    # Indicate who your project is intended for
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Bio-Informatics',

    # Pick your license as you wish (should match "license" above)
    # 'License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)',

    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12", 
    "Programming Language :: Python :: 3.13", 
    "Programming Language :: Python :: 3.14", 
]
dependencies = ["numpy", "scipy", "ete4"]

[project.urls]
repository = "https://github.com/OrthoFinder/PhyloDist"

[project.optional-dependencies]
build = ["build", "twine", "wheel"]
dev = [
    "python-semantic-release",
    "pytest",
    "pytest-cov",
    "pytest-check",
    "pytest-order",
    # "pytest-subtests",
    "setuptools>=77",
    "setuptools-scm>=8",
    "packaging>=24.2",
    "build",
]

[project.scripts]
phylodist = "phylodist.run.__main__:main"
primary_transcript = "tools.primary_transcript:main"
make_ultrametric = "tools.make_ultrametric:main"
convert_phylodist_tree_ids = "tools.convert_phylodist_tree_ids:main"

[tool.semantic_release]
branch = "main"
version_source = "tag"
# upload_to_pypi = true
upload_to_release = true
build_command = "python -m build"

[tool.setuptools.packages.find]
where = ["src"]
include = ["phylodist*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"ExampleData" = ["*"]
"*" = ["LICENSE"]

[tool.setuptools.exclude-package-data]
phylodist = ["**/__pycache__", "**/*.pyc"]
"*" = ["tests/**"]

[tool.coverage.run]
source = ["src/phylodist"]
branch = true
parallel = true
concurrency = ["thread", "multiprocessing"]
# patch = ["subprocess"] 
# sigterm = true   

[tool.coverage.report]
show_missing = true
omit = [
    "src/phylodist/_version.py",
]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]

[tool.pytest.ini_options]
# addopts = "--cov=phylodist"
addopts = "--cov=phylodist --cov-config=pyproject.toml"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "disabled: marks tests as disabled (deselect with '-m \"not disabled\"')",
    "regression: marks a test as a regression test",
]

[tool.setuptools_scm]
tag_regex = "^(?:v)?(?P<version>\\d+\\.\\d+\\.\\d+)$"
write_to = "src/phylodist/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
fallback_version = "1.0.0"