[build-system]
requires = [
    "setuptools>=77",
    "setuptools-scm[toml]>=8",
    "wheel",
    "packaging>=24.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "phylodist"
authors = [
    { name = "Yi Liu", email = "caoxen7ys@yahoo.com" },
]
description = "Python tools for comparing phylogenetic trees using classical and information-theoretic distance and similarity measures"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.11"
keywords = [
    "phylogenetics",
    "tree distance",
    "tree similarity",
    "bioinformatics",
]
license = "LGPL-3.0-only"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy",
    "scipy",
    "ete4",
]

[project.urls]
Repository = "https://github.com/OrthoFinder/PhyloDist"

[project.optional-dependencies]
build = [
    "build",
    "twine",
    "wheel",
]
dev = [
    "python-semantic-release",
    "pytest",
    "pytest-cov",
    "pytest-check",
    "pytest-order",
    "build",
]

[project.scripts]
phylodist = "phylodist.main:main"

[tool.semantic_release]
branch = "main"
version_source = "tag"
upload_to_release = true
build_command = "python -m build"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["phylodist*"]

[tool.setuptools.package-data]
phylodist = ["LICENSE"]

[tool.setuptools.exclude-package-data]
phylodist = ["**/__pycache__", "**/*.pyc"]
"*" = ["tests/**"]

[tool.coverage.run]
source = ["src/phylodist"]
branch = true
parallel = true
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
show_missing = true
omit = [
    "src/phylodist/_version.py",
]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
addopts = "--cov=phylodist --cov-config=pyproject.toml"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "disabled: marks tests as disabled (deselect with '-m \"not disabled\"')",
    "regression: marks a test as a regression test",
]

[tool.setuptools_scm]
tag_regex = "^(?:v)?(?P<version>\\d+\\.\\d+\\.\\d+)$"
write_to = "src/phylodist/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
fallback_version = "1.0.0"